@@ -1,6 +1,8 @@
 0.6.0
 -----
 
+* Table.to_csv implemented (#169)
+* Table.from_csv implemented. (#168)
 * Added Table.format method for pretty-printing tables. (#191)
 * Analysis class now implements a caching workflow. (#171)
 
